@@ -1,3 +1,13 @@
+2003-05-24  Zoran Vasiljevic <zoran@archiware.com>
+
+	* nsd/info.c: added workaround for Tcl_GetMemoryInfo() which
+	is not defined in Tcl if somebody undefines USE_THREAD_ALLOC.
+	Generally, this call should be avoided altogether.
+
+	* nsd/tclinit.c: added call to Tcl_FinalizeThread() in the
+	DeleteInterps() to properly finalize Tcl data on thread exit,
+ 	thus closing the re-appearing memory leak from V3.3 nsd.
+
 2003-05-20  Mark Page  <mpagenva@aol.com>
 
 	* TAG aolserver_v4_r0_beta_7
